feat: novos enpoints